--- a/GlucoseGurusWebApi.WebApi/Properties/launchSettings.json
+++ b/GlucoseGurusWebApi.WebApi/Properties/launchSettings.json
@@ -5,8 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7014;http://localhost:5174",
+      "applicationUrl": "https://localhost:7014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
