--- a/.github/workflows/github_workflow_simplified.yml
+++ b/.github/workflows/github_workflow_simplified.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - main
       - deployment 
+      - master
 
   # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
@@ -89,3 +90,4 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: <publishData><publishProfile profileName="${{secrets.AZURE_WEBAPP_NAME}} - Zip Deploy" publishMethod="ZipDeploy" publishUrl="${{ secrets.AZURE_WEBAPP_NAME }}.scm.azurewebsites.net:443" userName="${{ secrets.AZURE_WEBAPP_PUBLISH_USERNAME }}" userPWD="${{ secrets.AZURE_WEBAPP_PUBLISH_PASSWORD }}" destinationAppUrl="http://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>
         package: '${{ env.PUBLISH_DIRECTORY}}'
+        clean: true
