Added unittests for ParentGuardianController

--- a/GlucoseGurusWebApi.Test/GlucoseGurusWebApi.WebApi.Test.csproj
+++ b/GlucoseGurusWebApi.Test/GlucoseGurusWebApi.WebApi.Test.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GlucoseGurusWebApi.WebApi\GlucoseGurusWebApi.WebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
